--- a/classification/Final_classification.ipynb
+++ b/classification/Final_classification.ipynb
@@ -13,7 +13,6 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "1fb24490f448430aaa38383a76a4dea2": {
@@ -5750,7 +5749,8 @@
           }
         }
       }
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -5765,7 +5765,7 @@
         "id": "knGwBm3JffIL",
         "outputId": "ef953ff8-019d-43a4-d96b-7c5b0896e911"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5825,7 +5825,7 @@
       "metadata": {
         "id": "sDC0upr9fgEX"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5850,7 +5850,7 @@
         },
         "outputId": "de7ee288-b785-420b-853c-87f40a0ffafb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5957,7 +5957,7 @@
       "metadata": {
         "id": "0Fl14cBdfnHn"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5970,7 +5970,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 365,
+          "height": 345,
           "referenced_widgets": [
             "1fb24490f448430aaa38383a76a4dea2",
             "4398403f760b4c0ca0cab472bbc5d5e9",
@@ -6054,7 +6054,7 @@
         "id": "J897oo0ufotD",
         "outputId": "7e2d63df-1bbd-4557-e730-c7733afa0d99"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6182,7 +6182,7 @@
         "id": "-N0J9VZAkUrT",
         "outputId": "d4d8bc3a-733b-45a0-bc2e-4cd9e48d8384"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6612,7 +6612,7 @@
         },
         "outputId": "ff705782-2c10-41e1-b7be-387bc57d042c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6641,7 +6641,7 @@
         "id": "o75qWwEJgLNg",
         "outputId": "83b09bb8-982f-46ac-9401-3aa5e25918cf"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6707,7 +6707,7 @@
       "metadata": {
         "id": "XJPxf5uilkVC"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -6718,12 +6718,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 36
         },
         "id": "wzk0z9xjlsqE",
         "outputId": "61e71e7c-0307-4cd0-ac70-18301d79f451"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6776,7 +6776,7 @@
         "id": "2qOgkHQIxtgZ",
         "outputId": "3552f8e4-756e-4e68-db38-c0cf04033d82"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6896,7 +6896,7 @@
         "id": "dd12XBUSl0LY",
         "outputId": "90ab1292-dcc5-45db-b345-ad45ce8f9d2e"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7447,7 +7447,7 @@
       "metadata": {
         "id": "nHEMECUsw3-r"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7491,7 +7491,7 @@
       "metadata": {
         "id": "7uuug5I8ka9N"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -7690,7 +7690,7 @@
         "id": "y8thF1ooDhIz",
         "outputId": "ea4bd687-b59c-47a3-c9d6-454ce6f07e69"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7788,7 +7788,7 @@
         "id": "N0QpXtPIEI_C",
         "outputId": "9b36f537-1ef0-4588-cdb4-569c16a42e79"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7849,7 +7849,7 @@
         "id": "T4cpeHL9EU1g",
         "outputId": "a173b2a3-f4f1-4088-b54c-07883bdf1be3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -7934,7 +7934,7 @@
         "id": "SGJlfcpYFCyt",
         "outputId": "4439b457-ad84-4073-ca99-fa6d574c06d9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8005,7 +8005,7 @@
         "id": "XdbkBTVCvUhD",
         "outputId": "4879bb9d-8166-4b86-9673-8f843d4ca6db"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -8034,7 +8034,7 @@
         "id": "LU85NwrBvZmW",
         "outputId": "cc60bc83-40a5-47f5-fc33-d814943feed5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8082,7 +8082,7 @@
         },
         "outputId": "3ca33b9f-077c-4a9d-dc47-3afb35a42ff9"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8101,7 +8101,7 @@
       "metadata": {
         "id": "dF33g-X4G_yi"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8140,7 +8140,7 @@
         "id": "gRfKWkMy2-vt",
         "outputId": "603b05da-f43f-4e81-af59-0f2fe70cfc88"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8556,7 +8556,7 @@
         "id": "GMKX1gWmvVEo",
         "outputId": "71d596e2-02ee-4f7c-c61d-9d3e74c2f010"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8580,7 +8580,7 @@
       "metadata": {
         "id": "SXP5IYjXS_oO"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8595,7 +8595,7 @@
         },
         "outputId": "587db797-6a5d-4298-8022-d2e8429d42a4"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8657,7 +8657,7 @@
         "id": "xxzXO9Xt50-K",
         "outputId": "4d107f99-7b43-41ad-a3c2-5cdc3e0c90af"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8757,7 +8757,7 @@
       "metadata": {
         "id": "5M9Qm2qD4Tp2"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8782,7 +8782,7 @@
         "id": "r_Vod7S44U--",
         "outputId": "1a74d236-56b2-46d8-9c91-c8fd68f4ce83"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8845,7 +8845,7 @@
         "id": "oGd-q1qN4eP_",
         "outputId": "c0687446-56d6-400e-a54e-aa7f787f0fa5"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8904,7 +8904,7 @@
         "id": "bN31-Xpz5G7u",
         "outputId": "4dea30e6-1ef5-4cb1-bc80-3c277e7407ae"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8912,6 +8912,243 @@
           "text": [
             "Results saved to final_sst_results.csv\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## HF hub upload"
+      ],
+      "metadata": {
+        "id": "G1Dy7kHenKV_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+        "from peft import PeftModel\n",
+        "\n",
+        "# Load the base model (e.g., \"meta-llama/Llama-3.2-1B\")\n",
+        "base_model_name = \"meta-llama/Llama-3.2-1B\"\n",
+        "\n",
+        "# Load the base model\n",
+        "base_model = AutoModelForCausalLM.from_pretrained(base_model_name)\n",
+        "\n",
+        "# Define the output directory for the fine-tuned model\n",
+        "output_dir = \"/content/content/llama-3.2-fine-tuned-model\"\n",
+        "\n",
+        "# Load the PEFT model from the saved directory, passing the base model object\n",
+        "peft_model = PeftModel.from_pretrained(base_model, output_dir)  # Use base_model object here\n",
+        "\n",
+        "# Load the tokenizer from the saved directory\n",
+        "tokenizer = AutoTokenizer.from_pretrained(output_dir)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 113,
+          "referenced_widgets": [
+            "a3af42a1c29442ecb6f8cd4b679c5567",
+            "af5a6bd0c7e04e6591439c8608e12227",
+            "e517c055f0fd4042a1f2814ccf91ab92",
+            "869217d493444e0889b94b527de7407c",
+            "318ef4168bac4195b95e0e386bf3eb04",
+            "ecd3bf4e9fa8448eb20b7db920aef6eb",
+            "c4725b2d221d48b19c7b6bd107c259e4",
+            "2897b71163dd4f13b492192f5b4b337a",
+            "ace079e0c3284d3c83082919093134b7",
+            "8386b8b521254104a0cb9ab651e6c009",
+            "78d5f5650f1d49ebb60331953c0bd912",
+            "6f6752e4721c4ba88cf3f3b63df3aaa6",
+            "9366a0b0dfdb4c8ea4ac1df80808476a",
+            "356c484dbfdc488d8d5c9289dbb3da4a",
+            "438e2bc601f445d4b1de46206d1fbfab",
+            "bf9cdef244a24421bfec1e068c1f8145",
+            "4c946ed6fea448c48c0494cace2df425",
+            "23dc036d46d24061beb06d3c04046e13",
+            "73d0e23e1a8e47568908535eda32aa01",
+            "481cec5163ae49e18657fb1a27b2c478",
+            "cd79f5662d3740509f2098fd096abdcb",
+            "5bfd56d6a7f24f1fb779caa3fcaacfa5",
+            "4931efcc5bfd4c27bd28d99f336912e3",
+            "b8ff5231f7cf43d9bff6050baeb37abe",
+            "415692299b074d0a9c18b8bac65f7523",
+            "206c7ffcb627483aae58e60674f065a7",
+            "d79ecb5fe2764edca7448806ee33778f",
+            "a0ad8fafbe3b47859205779c5ef7acf9",
+            "01dcb2ac184c4092bf874faf95fd80b3",
+            "cf3665a634bd42379f89183f9d0b44e5",
+            "21ebbcb674dd4cc9a68f304e4e6c794c",
+            "e2f05439597d4a36afba08f42129ba1b",
+            "000c8efd4de34c55a7597e3abf9b2e7c"
+          ]
+        },
+        "id": "4kwyubXaefBi",
+        "outputId": "e62e383c-9259-47f6-f23a-9011f6f5ec5b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "config.json:   0%|          | 0.00/843 [00:00<?, ?B/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "a3af42a1c29442ecb6f8cd4b679c5567"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "model.safetensors:   0%|          | 0.00/2.47G [00:00<?, ?B/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "6f6752e4721c4ba88cf3f3b63df3aaa6"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "generation_config.json:   0%|          | 0.00/185 [00:00<?, ?B/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "4931efcc5bfd4c27bd28d99f336912e3"
+            }
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from huggingface_hub import notebook_login\n",
+        "from transformers import AutoTokenizer\n",
+        "from peft import PeftModel\n",
+        "\n",
+        "# Define the repository name (replace with your actual repo name)\n",
+        "repo_name = \"hmhm11901/llama-3.2-sst-finetuned\"  # Replace with your desired Hugging Face repo name\n",
+        "\n",
+        "# Push the fine-tuned PEFT model to the Hub\n",
+        "peft_model.push_to_hub(repo_name, commit_message=\"Fine-tuned Llama 3.2 on SST for sentiment analysis.\")\n",
+        "\n",
+        "# Push the tokenizer to the Hub\n",
+        "tokenizer.push_to_hub(repo_name, commit_message=\"Tokenizer for fine-tuned Llama 3.2.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168,
+          "referenced_widgets": [
+            "5dd2744f6c6640558ffb441b728d2e3a",
+            "b955b78dc68049c9b92069719aa70315",
+            "a04d9f7492074a219accd29a7f5675a8",
+            "a46f03823fe041e7931d6a25e947a7f7",
+            "13fc2ac59ae049b1bdfe3c9fcf0db432",
+            "6a61bd5455494be286a9d132e0c98cc0",
+            "cf662be5214140d7bdfff12614c4b61e",
+            "d045568cbdba4c28a9cecf12a0cb6ba2",
+            "da8ca64a09ca47bcaaa1a37b25d76314",
+            "577a668124f0454880c819de3bd7094d",
+            "3568367bbe534e7b98d76714e3d5d7e9",
+            "23ac1f062e854fc69a7535ca91b34515",
+            "856f5a830cbb4420be3f7d82512a704a",
+            "65854dea92ae4a488b1de8e09708cad6",
+            "d2214b84f0d0413888f2fb68117c469e",
+            "15336c2896534451a5613f1c73224789",
+            "41e73aeb6317459287689f0424ac36c4",
+            "a0e09c8335e442579c9c9b4d0e54a5dc",
+            "75f77c77e5a846bc9fcc724d11e9e8d6",
+            "90c04e0d89d74ab7b32a5247a0481d36",
+            "22bb47dea6d54f2f969e120855bc151e",
+            "ebcc20c31cd143e58f9f6f2a4c12e064",
+            "9f0b3a6c4bc545d1a6af73be0ca7796d",
+            "56db94f17d06411e94d7ed01cfb5618c",
+            "429cc3c0c1324ca6baea4ee511303081",
+            "5acb06dfd8da421f84ba9eab9a2f773b",
+            "780a0a9d1888459e8bea4630951e7d4b",
+            "5f198c11bb7448abad1cb8874955a5bf",
+            "09ba421796944b6685df935fc8802bb1",
+            "43eb0da4987e43db990f18160f27416a",
+            "56f4a8f352624356a4af46b28f30fb53",
+            "00a6e447cecb4c0683a333a6638ad1fd",
+            "4192473623ae4e7f85b8ea46dcc71b85"
+          ]
+        },
+        "id": "0I5LB2LRmxib",
+        "outputId": "21762aa4-2d23-48e1-b682-ee986c52695a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "adapter_model.safetensors:   0%|          | 0.00/180M [00:00<?, ?B/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "5dd2744f6c6640558ffb441b728d2e3a"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "README.md:   0%|          | 0.00/5.17k [00:00<?, ?B/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "23ac1f062e854fc69a7535ca91b34515"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "tokenizer.json:   0%|          | 0.00/17.2M [00:00<?, ?B/s]"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "9f0b3a6c4bc545d1a6af73be0ca7796d"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CommitInfo(commit_url='https://huggingface.co/hmhm11901/llama-3.2-sst-finetuned/commit/e84e00ec4fae66a0a8dbcc923a90c0ec3996ff9d', commit_message='Tokenizer for fine-tuned Llama 3.2.', commit_description='', oid='e84e00ec4fae66a0a8dbcc923a90c0ec3996ff9d', pr_url=None, repo_url=RepoUrl('https://huggingface.co/hmhm11901/llama-3.2-sst-finetuned', endpoint='https://huggingface.co', repo_type='model', repo_id='hmhm11901/llama-3.2-sst-finetuned'), pr_revision=None, pr_num=None)"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
         }
       ]
     }
